--- a/6.CSS_Cascading_Style_Stylesheet/bai_tap/tao_trang_doc_truyen_ngan.html
+++ b/6.CSS_Cascading_Style_Stylesheet/bai_tap/tao_trang_doc_truyen_ngan.html
@@ -9,28 +9,39 @@
 <div id="menu">
     <h1>MỤC LỤC TRUYỆN</h1>
     <div id="left" style="display: inline">
-        <a style="color: red">TRANG CHỦ</a>
-        <p class="truyen">Truyện Mới Nhất</p><br>
-        <p class="truyen">Truyện Hot Nhất</p><br>
-        <p class="truyen">Truyện Hay Nhất</p><br>
-        <p class="truyen">Truyện Ngẫu Nhiên</p><br>
+        <a style="color: red"
+           href="http://localhost:63342/bai_tap/tao_trang_doc_truyen_ngan.html?_ijt=bbrm0sdjams59l133ganq40hhs">TRANG
+            CHỦ</a><br><br>
+        <a class="truyen" href="http://www.nettruyen.com/hot">Truyện Mới Nhất</a><br><br>
+        <a class="truyen" href="https://truyenhay.com/danh-sach/truyen-hot">Truyện Hot Nhất</a><br><br>
+        <a class="truyen" href="https://webtruyen.com/">Truyện Hay Nhất</a><br><br>
+        <a class="truyen" href="https://webtruyen.com/">Truyện Ngẫu Nhiên</a><br><br>
     </div>
 
     <div id="right" style="display: inline">
         <a style="color: red">DANH MỤC</a>
         <div>
             <div id="between">
-                <img src="52290c30c43fefef3459fe105267f6c5 (1).png" height="200" width="300"/>
+                <a href="https://truyen24.com/ba-chu-van-linh-chi-he-thong/"><img src="52290c30c43fefef3459fe105267f6c5 (1).png" height="200" width="300" /> </a>
             </div>
             <div id="between2">
-                <img src="5cjLufm.jpg" height="200" width="300"/>
+                <a href="https://truyen24.com/dai-mong-chu/"> <img src="5cjLufm.jpg" height="200" width="300"/> </a>
             </div>
             <div id="between3">
-                <img src="b83f6b7b2d1567bed37d30776182c0c6.jpg" height="200" width="300"/>
+                <a href="https://truyen24.com/ta-xuyen-khong-thanh-ta-than/"><img src="b83f6b7b2d1567bed37d30776182c0c6.jpg" height="200" width="300"/></a>
             </div>
         </div>
-
-        <div id="between4"><img src="c192b7ea41b8daa8c73a24ea653b7307.jpg" height="200" width="300"/></div>
+        <div>
+            <div  id="between4">
+                <a href="https://truyen24.com/tieu-hoa-yeu/"><img src="1518f3c9c98649289c20bf8ef849d3dd.jpeg" height="200" width="300"/> </a>
+            </div>
+            <div id="between5">
+                <a href="https://truyen24y-huong-thom/.com/em-ngui-tha"><img src="hinh-anh-dep-trong-truyen-ngon-tinh_103504096.jpg" height="200" width="300"/></a>
+            </div>
+            <div id="between6">
+                <a href="https://truyen24y-huong-thom/.com/em-ngui-tha"><img src="ddaaa18957648353100ce84303f32c5e.jpg" height="200" width="300"/></a>
+            </div>
+        </div>
     </div>
 
 
