--- a/7.thiet_ke_bo_cuc_trang_web/bai_tap/tao_layout_voi_rwd.html
+++ b/7.thiet_ke_bo_cuc_trang_web/bai_tap/tao_layout_voi_rwd.html
@@ -36,8 +36,8 @@
     <p>Lorem ipsum...</p>
 </section>
 <aside>
-    <a>ADS</a>
-    <a>ADS</a>
+    <a> <p style="margin-top: 30px">ADS</p></a>
+    <a><p style="margin-top: 30px">ADS</p></a>
 </aside>
 <footer>
     <a>Footer Text</a>
