--- a/7.thiet_ke_bo_cuc_trang_web/bai_tap/phat_trien_trang_web_xem_phim_hoat_hinh_truc_tuyen.html
+++ b/7.thiet_ke_bo_cuc_trang_web/bai_tap/phat_trien_trang_web_xem_phim_hoat_hinh_truc_tuyen.html
@@ -6,52 +6,58 @@
     <link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 <body>
+
 <header>
-    <h1>Phim Hoạt Hình</h1>
+    <a href="https://www.youtube.com/user/popskids"> <img src="phimhh.JPG"></a>
 </header>
 <head-link>
     <ul>
-        <li>Phim hoạt hình</li>
-        <li>Phim hoạt hình yêu thích</li>
-        <li>Nhân vật hoạt hình</li>
-        <li>Góp ý</li>
+        <li><a href="#" style="text-decoration: none"> Phim hoạt hình</a></li>
+        <li><a href="#" style="text-decoration: none ">Phim hoạt hình yêu thích</a></li>
+        <li><a href="#" style="text-decoration: none">Nhân vật hoạt hình</a></li>
+        <li><a href="#" style="text-decoration: none">Góp ý</a></li>
     </ul>
 </head-link>
 <left-content>
-    <video></video>
-    <a>Welcome đến với khách sạn Nobi -</a>
-    <a>5,147,528 lượt xem</a>
-    <a>Channel Fun</a>
-    <video></video>
-    <a>Suneo khủng lồ -</a>
-    <a>5,147,528 lượt xem</a>
-    <a>Doreamon Vietsub</a>
-    <video></video>
-    <a>Còi điều khiển vật -</a>
-    <a>5,147,528 lượt xem</a>
-    <a>Doreamon Vietsub</a>
-    <video></video>
-    <a>Chiếc máy tạo kẹo bông -</a>
-    <a>5,147,528 lượt xem</a>
-    <a>Doreamon Vietsub</a>
+    <img src="hqdefault.jpg" height="200" width="480"/>
+    <a class="chu">Welcome đến với khách sạn Nobi -</a>
+    <a class="so">5,147,528 lượt xem</a><br>
+    <a class="so">Channel Fun</a>
+    <img src="161-1619255_nh-doremon-v-nobita-doraemon-hd-png-download.png" height="200" width="480"/>
+    <a class="chu">Suneo khủng lồ -</a>
+    <a class="so">5,147,528 lượt xem</a><br>
+    <a class="so">Doreamon Vietsub</a>
+    <img src="3-35358_amazing-doraemon-wallpaper-hd-hnh-nn-my-tnh.jpg" height="200" width="480"/>
+    <a class="chu">Còi điều khiển vật -</a>
+    <a class="so">5,147,528 lượt xem</a><br>
+    <a class="so">Doreamon Vietsub</a>
+    <img src="0.19.jpg" height="200" width="480"/>
+    <a class="chu">Chiếc máy tạo kẹo bông -</a>
+    <a class="so">5,147,528 lượt xem</a><br>
+    <a class="so">Doreamon Vietsub</a>
 </left-content>
+
+
 <right-content>
-    <video></video>
-    <a>Tớ là Mari -</a>
-    <a>5,147,528 lượt xem</a>
-    <a>Tác giả</a>
-    <p class="p">Bộ phim kể về câu chuyện Thạch Sanh chém Trăng Tinh cứu dâ,bắn Đại Bàng cứu công chúa,dùng tiếng đàn nhân nghĩa
-        dẹp tan quân xâm lăng.Nhưng cuộc đời Thạch Sanh luôn bị Lý Thông làm điêu đứng.Cuối cùng chính nghĩa đã thắng.Tên Lý Thông gian ác bị
-        đền tội.Mời các bạn cùng đón xem và cảm nhận </p>
-    <p class="p">Bộ phim kể về câu chuyện Thạch Sanh chém Trăng Tinh cứu dâ,bắn Đại Bàng cứu công chúa,dùng tiếng đàn nhân nghĩa
-        dẹp tan quân xâm lăng.Nhưng cuộc đời Thạch Sanh luôn bị Lý Thông làm điêu đứng.Cuối cùng chính nghĩa đã thắng.Tên Lý Thông gian ác bị
-        đền tội.Mời các bạn cùng đón xem và cảm nhận </p>
-    <p class="p">Bộ phim kể về câu chuyện Thạch Sanh chém Trăng Tinh cứu dâ,bắn Đại Bàng cứu công chúa,dùng tiếng đàn nhân nghĩa
-        dẹp tan quân xâm lăng.Nhưng cuộc đời Thạch Sanh luôn bị Lý Thông làm điêu đứng.Cuối cùng chính nghĩa đã thắng.Tên Lý Thông gian ác bị
-        đền tội.Mời các bạn cùng đón xem và cảm nhận </p>
+    <video id="video" width="100%" controls>
+        <source src="doremon.mp4" type="video/mp4">
+    </video>
+    <a class="chu">Tớ là Mari -</a>
+    <a class="so">5,147,528 lượt xem</a><br>
+    <a class="so">Tác giả</a>
+    <p class="p">Doraemon (ドラえもん?)[1] là bộ truyện tranh Nhật Bản của tác giả Fujiko Fujio được sáng tác vào năm 1969,
+        ban đầu dành cho lứa tuổi thiếu nhi. Tác phẩm sau đó đã được chuyển thể thành các tập phim hoạt hình ngắn, dài
+        cùng các thể loại khác như kịch, trò chơi điện tử. Bộ truyện kể về một chú mèo máy tên là Doraemon đến từ thế kỷ
+        22 để giúp một cậu bé cấp 1 hậu đậu tên là Nobi Nobita. Các câu chuyện của Doraemon thường ngắn gọn, dễ hiểu, dí
+        dỏm và mang cái nhìn lạc quan về cuộc sống tương lai cũng như sự phát triển của khoa học kĩ thuật. Doraemon đã
+        giành được nhiều giải thưởng truyện tranh ở Nhật Bản và được tạp chí TIME Asia bình chọn là một trong 22 nhân
+        vật nổi bật của châu Á.[2] Kể từ khi ra đời đến nay, Doraemon không chỉ được coi là nhân vật và bộ truyện tranh
+        được yêu thích hàng đầu ở Nhật Bản, nó còn trở thành một biểu tượng văn hóa của đất nước này và được trẻ em
+        nhiều nước trên thế giới yêu thích. </p>
+
 </right-content>
 <footer>
-    <p>2017-Thiết kế web bởi trang hoathinhvn.net </p>
+    <p style="margin-left: 40%">2017-Thiết kế web bởi trang hoathinhvn.net </p>
 </footer>
 </body>
 </html>
